Fix font scaling on recipes! Make stupid blue bars full-width on mobile!

--- a/SELP-4c-chili/SELP-4c-chili.scss
+++ b/SELP-4c-chili/SELP-4c-chili.scss
@@ -42,14 +42,15 @@ $hr-color: #dadbdc;
   }
 
   .recipe-section {
-    font-size: 31px;
     line-height: 1.4;
+
+    // make full-width on mobile!
+    margin-left: -32px;
+    margin-right: -32px;
 
     & > .headline {
       background: $blue;
       color: #fff;
-      font-size: 50px;
-      font-weight: 900;
       margin-bottom: 20px;
       padding: 15px 0;
       text-align: center;
@@ -67,16 +68,19 @@ $hr-color: #dadbdc;
 
     ol, ul {
       color: $blue;
-      margin-left: 20px;
       margin-right: 20px;
       li {
         margin-bottom: 15px;
       }
     }
     ol {
+      margin-left: 20px;
       font-weight: bold;
       list-style-position: inside;
       padding-left: 5px;
+    }
+    ul {
+      margin-left: 10px; // because list style outside!
     }
   } // .recipe-section
 
@@ -104,7 +108,7 @@ $hr-color: #dadbdc;
   } // .footer
 
   .view-more {
-    margin-top: 50px;    
+    margin-top: 50px;
   }
 
 }
@@ -114,7 +118,14 @@ $hr-color: #dadbdc;
 
   #{$wrap-class} {
 
+    .recipe-section {
+      margin-left: 0;
+      margin-right: 0;
 
+      ul {
+        margin-left: 20px;
+      }
+    }
 
   }
 }
